--- a/src/styles/SearchSection.module.css
+++ b/src/styles/SearchSection.module.css
@@ -11,6 +11,12 @@
     
 }
 
+.divv{
+   max-width: 500px;
+   min-width: 400px;
+display: flex
+
+}
 .searchText {
     height: 40px;
     font-size: 30px;
@@ -288,7 +294,7 @@ text-align: center;
         flex-direction: column;  
         justify-content: center; 
         align-content: center;  
-        width: 90vw;
+        width: 90%;
         
         
     }
@@ -326,6 +332,14 @@ text-align: center;
 
     .searchText {
         font-size: 20px
+    }
+
+    .divv{
+        min-width: 0
+    }
+
+    .sliderDescription{
+        margin-right: 30px
     }
 
 } 
